--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -95,6 +95,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
   padding: 1vw;
 }
 .value_chain__card_logo img {
@@ -331,6 +332,7 @@
 .services__content__img img {
   width: 100%;
   height: 100%;
+  min-height: 160px;
 }
 .services__content__text {
   display: flex;
