--- a/styles/OurService.module.css
+++ b/styles/OurService.module.css
@@ -18,12 +18,19 @@
   flex-direction: column;
   gap: 2vw;
 }
+/* .services__container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2vw;
+} */
 .feed_video {
   width: 100%;
   height: 30vw;
   min-height: 300px;
   background-color: brown;
   border-radius: 12px;
+  position: relative;
 }
 .feed_video iframe {
   width: 100%;
