--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -101,6 +101,24 @@
   border-radius: 10px;
   padding: 1rem 2rem;
 }
+.direction {
+  align-self: baseline;
+  background-color: #ef7832;
+  margin: 0.5rem 0;
+  padding: 0.5rem 0.8rem;
+  border-radius: 10px;
+  color: white;
+}
+.map_picc {
+  background-color: royalblue;
+  width: 100%;
+  height: 35vw;
+  min-height: 280px;
+}
+.map_picc img {
+  width: 100%;
+  height: 100%;
+}
 @media screen and (max-width: 1440px) {
   .contact__thing span {
     font-weight: 700;
